fixed sasuke story overflow bug

--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ footer p{
         right: unset;
         bottom: unset;
         top: 5vh;
-        min-width:350px;
+        min-width:300px;
         width: 70vw;
 
     }
